--- a/bililive.html
+++ b/bililive.html
@@ -279,7 +279,9 @@
 					</div>
 				</div>
 			</div>
-			<div style="position:absolute;top:30px;left:0;width: calc(100% - 15px);line-height: 35px;background: rgba(255,255,255,0.7);padding-left: 15px;color: #00A2FF;font-size: 15px;">Q and A</div>
+			<div style="position:absolute;top:30px;left:0;width: calc(100% - 15px);line-height: 35px;background: rgba(255,255,255,0.7);padding-left: 15px;color: #00A2FF;font-size: 15px;">
+				Q and A<a style="float: right;" href="https://github.com/Sonic853/Bilibili-Live-Profile-853-style/" target="_blank"><div style="width: 31px;height: 31px;background: url(http://i13.tietuku.com/2c5f0e9f4a6da34d.png) no-repeat scroll center center / 31px 31px;float: right;margin-right: 20px;"></div></a><a href="http://creativecommons.org/licenses/by-nc/4.0/deed.zh" target="_blank"><div style="width: 88px;height: 31px;background: url(https://licensebuttons.net/l/by-nc/4.0/88x31.png);float: right;"></div></a>
+			</div>
 		</div>
 		<div id="853_404" style="position: relative;width: 604px;height: 258px;background: #FFF;border: 1px solid #0FBC46;">
 			<div style="width: 100%;background: #0FBC46;max-height: 30px;">
