--- a/bililive.html
+++ b/bililive.html
@@ -1,6 +1,6 @@
 <div style="width: 1160px; height: 260px; margin-top: -41px; background: #FFF;overflow: hidden;display: inline-block;">
 	<div style="width: 277px;height: 260px;float: right;text-align: center;">
-		<div style="width: 208px;height: 208px;background: url(http://i13.tietuku.com/31c135f5e0edd890.gif)no-repeat;margin: 0 auto;"></div>
+		<div style="width: 208px;height: 208px;background: url(http://ww3.sinaimg.cn/large/7b777075gw1f5jbw074fjg20by0bydg6.gif)no-repeat;margin: 0 auto;background-size: 208px;"></div>
 		<p>sonic853@foxmail.com</p>
 		<p>穷啦穷啦，我真的穷了的说2333_(:з」∠)_</p>
 		<p>捐助时报上ID哦_(:з」∠)_</p>
@@ -26,9 +26,12 @@
 					<div style="padding: 29px;">
 						<div style="width: 318px;height: 170px;position: relative;">
 							<p style="font-size: 28px;color: #000;">Sonic853</p>
-							<p style="font-size: 16px;color: #000;">在校学生，喜欢前端和PHP制作，皮肤制作与apk汉化什么的，玩游戏不是很好...</p>
-							<p style="font-size: 13px;color: #000;">只有在放假期间才能直播。。直播时间不定期。。。</p>
+							<p style="font-size: 12px;color: #000;">在校学生，喜欢前端和PHP制作，皮肤制作与apk汉化什么的，玩游戏不是很好...</p>
+							<p style="font-size: 12px;color: #000;">点歌姿势：发送“点歌 Emergency (Original Mix)”即可</p>
+							<p style="font-size: 12px;color: #000;">只有在放假期间才能直播。。直播时间不定期。。。</p>
+							<p style="font-size: 12px;color: #000;">该页面制作By:消失的853</p>
 							<a href="http://853.bronya.net/?bililive" target="_blank" style="position: absolute;bottom: 0;right: 0;padding: 0 20px;line-height: 28px;background: #29CC5D;text-decoration: none;color: #FFF;">进入我的博客</a>
+							<a href="http://message.bilibili.com/#whisper/mid1968333" target="_blank" style="position: absolute;bottom: 0;right: 0;padding: 0 20px;line-height: 28px;background: #29CC5D;text-decoration: none;color: #FFF;">我要定制直播间简介</a>
 						</div>
 					</div>
 				</div>
@@ -60,23 +63,14 @@
 				<div style="width: 228px;height: 228px;float: right;overflow-y: scroll;">
 					<div style="width: 198px;margin: 10px auto 10px;">
 						<p style="font-size: 16px;color: #000;">电脑配置</p>
-						<img src="http://i11.tietuku.com/ff5418716ea8221c.png" width="198px" height="44px" style="margin-top: 15px;" title="操作系统" />
-						<img src="http://i12.tietuku.com/b893d695a1f77414.png" width="24px" height="24px" style="margin-top: 15px;" title="CPU" />
-						<p style="color: #000;">Intel core i3 3240</p>
-						<img src="http://i12.tietuku.com/c5e5c35123aecd38.png" width="24px" height="24px" style="margin-top: 15px;" title="硬盘" />
-						<p style="color: #000;">西部数据500GB 7200转 16MB SATA3 蓝盘</p>
-						<img src="http://i13.tietuku.com/00c20df090c4d8b4.png" width="24px" height="24px" style="margin-top: 15px;" title="主板" />
-						<p style="color: #000;">技嘉 GA-H61M-DS2</p>
-						<img src="http://i11.tietuku.com/ef81db3bca241cdd.png" width="24px" height="24px" style="margin-top: 15px;" title="内存" />
-						<p style="color: #000;">6GB （金士顿 DDR3 1600MHz 4+2）</p>
-						<img src="http://i11.tietuku.com/943a2e79ca9f81e0.png" width="24px" height="24px" style="margin-top: 15px;" title="显卡" />
-						<p style="color: #000;">Intel HD Graphics 2500</p>
-						<img src="http://i11.tietuku.com/06a0094afed1a4aa.png" width="24px" height="24px" style="margin-top: 15px;" title="声卡" />
-						<p style="color: #000;">瑞昱 ALC887 @ 英特尔 Lynx Point 高保真音</p>
-						<img src="http://i13.tietuku.com/e0bad6a00e763222.png" width="24px" height="24px" style="margin-top: 15px;" title="显示器" />
-						<p style="color: #000;">HPC 1786BM</p>
-						<img src="http://i11.tietuku.com/c24abcb2d27d0e1b.png" width="24px" height="24px" style="margin-top: 15px;" title="网卡" />
-						<p style="color: #000;">瑞昱 RTL8168/8111 PCI-E Gigabit Ethernet Adapter</p>
+						<img src="http://i11.tietuku.com/ff5418716ea8221c.png" style="margin-top: 15px;" title="操作系统" height="44px" width="198px"><img src="http://i12.tietuku.com/b893d695a1f77414.png" style="margin-top: 15px;" title="CPU" height="24px" width="24px"><p style="color: #000;">Intel core i3 3240</p>
+						<img src="http://i12.tietuku.com/c5e5c35123aecd38.png" style="margin-top: 15px;" title="硬盘" height="24px" width="24px"><p style="color: #000;">西部数据500GB 7200转 16MB SATA3 蓝盘</p>
+						<img src="http://i13.tietuku.com/00c20df090c4d8b4.png" style="margin-top: 15px;" title="主板" height="24px" width="24px"><p style="color: #000;">技嘉 GA-H61M-DS2</p>
+						<img src="http://i11.tietuku.com/ef81db3bca241cdd.png" style="margin-top: 15px;" title="内存" height="24px" width="24px"><p style="color: #000;">6GB （金士顿 DDR3 1600MHz 4+2）</p>
+						<img src="http://i11.tietuku.com/943a2e79ca9f81e0.png" style="margin-top: 15px;" title="显卡" height="24px" width="24px"><p style="color: #000;">Intel HD Graphics 2500</p>
+						<img src="http://i11.tietuku.com/06a0094afed1a4aa.png" style="margin-top: 15px;" title="声卡" height="24px" width="24px"><p style="color: #000;">瑞昱 ALC887 @ 英特尔 Lynx Point 高保真音</p>
+						<img src="http://i13.tietuku.com/e0bad6a00e763222.png" style="margin-top: 15px;" title="显示器" height="24px" width="24px"><p style="color: #000;">HPC 1786BM</p>
+						<img src="http://i11.tietuku.com/c24abcb2d27d0e1b.png" style="margin-top: 15px;" title="网卡" height="24px" width="24px"><p style="color: #000;">瑞昱 RTL8168/8111 PCI-E Gigabit Ethernet Adapter</p>
 					</div>
 				</div>
 			</div>
@@ -142,7 +136,6 @@
 							<p style="color: rgb(240, 91, 147);">社团：853的安全屋</p>
 							<p style="color: rgb(240, 91, 147);">社团ID：3006145</p>
 						</div>
-						<div style="width: 105px;height: 105px;float: right;border-radius: 24px;margin-top: 8px;background: url(http://i13.tietuku.com/e5335f4218343660.jpg);"></div>
 						<div style="clear:both"></div>
 					</div>
 				</div>
@@ -163,14 +156,14 @@
 				<div style="width: 604px; height: 90px;">
 					<div style="float: left;text-align: center;width: 254px;">
 						<p style="font-size: 24px;color: rgb(199, 213, 224);line-height: 60px;">CS:GO信息</p>
-						<p style="text-decoration:line-through">看看有多少高手死在这菜鸟手里</p>
+						<p style="text-decoration:line-through;color: rgb(199, 213, 224);">看看有多少高手死在这菜鸟手里</p>
 					</div>
 					<a target="_blank" href="http://csgo-stats.com/sonic853/"><div style="width: 350px;height: 90px;float: right;background: url(http://csgo-stats.com/sonic853/graphic.png);"></div></a>
 				</div>
 				<div style="width: 604px;height: 120px;position: absolute;bottom: 0px;left: 0px;">
 					<div style="float: right;text-align: center;width: 204px;">
 						<p style="font-size: 24px;color: rgb(199, 213, 224);line-height: 60px;">Steam信息</p>
-						<p style="text-decoration:line-through">大伟的氪金技术远远都比不上G胖</p>
+						<p style="text-decoration:line-through;color: rgb(199, 213, 224);">大伟的氪金技术远远都比不上G胖</p>
 						<a href="http://live.bilibili.com/15667#853_Deals" target="_self" style="display: inline-block;padding: 0px 15px;font-size: 12px;line-height: 24px;border-radius: 2px;color: #67C1F5;background: #437EA0;">为什么？</a>
 					</div>
 					<a target="_blank" href="http://steamcommunity.com/id/sonic853/"><div style="width: 400px;height: 120px;float: left;background: url(http://steamsignature.com/card/1/76561198129129355.png);"></div></a>
@@ -285,7 +278,6 @@
 		</div>
 		<div id="853_404" style="position: relative;width: 604px;height: 258px;background: #FFF;border: 1px solid #0FBC46;">
 			<div style="width: 100%;background: #0FBC46;max-height: 30px;">
-				<a href="http://live.bilibili.com/15667#853_404" target="_self"><div style="width: 30px;height: 29px;background: #e81123 url(http://i12.tietuku.com/88611e5445632c8a.png) no-repeat;float: right;"></div></a>
 				<p style="padding-left: 8px;line-height: 30px;font-size: 16px;color: #282828;float: left;cursor: default;">Server error</p>
 				<div style="clear:both"></div>
 			</div>
@@ -296,7 +288,7 @@
 					<p>Maybe there is a typo in the url.</p>
 					<p style="margin-bottom: 12px;">Search Engine may help you find out new pages.</p>
 					<div style="position: absolute;bottom: 24px;right: 24px;">
-						<a style="border: 2px solid #29CC5D;background: #29CC5D;color: #FFF;float: right;display: block;padding: 0px 20px;line-height: 28px;"href="http://live.bilibili.com/15667#853_info" target="_self">Back</a>
+						<a style="border: 2px solid #29CC5D;background: #29CC5D;color: #FFF;float: right;display: block;padding: 0px 20px;line-height: 28px;" href="http://live.bilibili.com/15667#853_info" target="_self">Back</a>
 						<a style="border: 2px solid #FFF;background:#FFF;color:#000;float: right;display: block;padding: 0px 20px;line-height: 28px;" href="http://live.bilibili.com/15667#853_info" target="_self">Home</a>
 						<div style="clear:both"></div>
 					</div>
@@ -317,12 +309,12 @@
 			<div style="position:relative;width: 604px;height: 228px;background: #1B2838 url(http://i13.tietuku.com/2ae58cc87d257e3a.png) no-repeat scroll center center / cover;">
 				<div style="display: inline-block;margin: 15px 15px;">
 					<div style="width: 257px;height: 167px;float: left;background: #324A66;padding: 15px;">
-						<div style="width: 100%;height: 130px;margin-bottom:3px;background: transparent url(http://ww4.sinaimg.cn/large/7b777075jw1f122i542w8j204o02swes.jpg) no-repeat scroll center center / 257px auto;"></div>
+						<a href="http://store.steampowered.com/app/420110/" target="_blank"><div style="width: 100%;height: 130px;margin-bottom:3px;background: transparent url(http://i11.tietuku.com/4b333aad7d50b4c6.jpg) no-repeat scroll center center / 257px auto;"></div></a>
 						<div style="float: left;height: 34px;">
-							<div style="padding: 0px 5px;line-height: 34px;font-size: 26px;color: #A4D007;background: #4C6B22;float: left;">+90%</div>
+							<div style="padding: 0px 5px;line-height: 34px;font-size: 24px;color: #A4D007;background: #4C6B22;float: left;">-11%</div>
 							<div style="background: #000;float: right;height: 26px;padding: 4px 10px 4px 7px;">
-								<div style="text-decoration: line-through;color: #626366;font-size: 11px;line-height: 13px;">¥ 15</div>
-								<div style="color: #B0AEAC;font-size: 13px;line-height: 13px;">¥29</div>
+								<div style="text-decoration: line-through;color: #626366;font-size: 11px;line-height: 13px;">¥ 36</div>
+								<div style="color: #B0AEAC;font-size: 13px;line-height: 13px;">¥32</div>
 							</div>
 						</div>
 						<div style="height: 34px;float: right;text-align: right;">
@@ -333,19 +325,19 @@
 					<div style="width: 287px;height: 197px;float: right;background: #16202D;">
 						<div style="width: 287px;">
 							<div style="width: 123.5px;height: 61px;float: left;padding: 10px;">
-								<div style="width: 123.5px;height: 45px;background: transparent url(http://ww3.sinaimg.cn/large/7b777075jw1f1229cdbn2j204o02sjre.jpg) no-repeat scroll center -20px / 123.5px auto;"></div>
+								<a href="http://store.steampowered.com/app/730/" target="_blank"><div style="width: 123.5px;height: 45px;background: transparent url(http://ww3.sinaimg.cn/large/7b777075jw1f1229cdbn2j204o02sjre.jpg) no-repeat scroll center -20px / 123.5px auto;"></div></a>
 								<div style="display:inline;padding: 0px 3px;color: #A4D007;background: #4C6B22;line-height: 15px;">+90%</div>
 								<div style="display:inline;text-decoration: line-through;color: #626366;font-size: 11px;line-height: 15px;">¥ 48</div>
 								<div style="display:inline;padding-left: 4px;font-size: 11px;color: #B0AEAC;line-height: 15px;">¥ 91</div>
 							</div>
 							<div style="width: 123.5px;height: 61px;float: left;padding: 10px;">
-								<div style="width: 123.5px;height: 45px;background: transparent url(http://i11.tietuku.com/b04802d1c63808d1.jpg) no-repeat scroll center -20px / 123.5px auto;"></div>
+								<a href="http://store.steampowered.com/app/550/" target="_blank"><div style="width: 123.5px;height: 45px;background: transparent url(http://i11.tietuku.com/b04802d1c63808d1.jpg) no-repeat scroll center -20px / 123.5px auto;"></div></a>
 								<div style="display:inline;padding: 0px 3px;color: #A4D007;background: #4C6B22;line-height: 15px;">+80%</div>
 								<div style="display:inline;text-decoration: line-through;color: #626366;font-size: 11px;line-height: 15px;">¥ 68</div>
 								<div style="display:inline;padding-left: 4px;font-size: 11px;color: #B0AEAC;line-height: 15px;">¥122</div>
 							</div>
 							<div style="width: 123.5px;height: 61px;float: left;padding: 10px;">
-								<div style="width: 123.5px;height: 45px;background: transparent url(http://ww2.sinaimg.cn/large/7b777075jw1f123pw6dl9j204o02sq34.jpg) no-repeat scroll center -20px / 123.5px auto;"></div>
+								<a href="http://store.steampowered.com/app/333600/" target="_blank"><div style="width: 123.5px;height: 45px;background: transparent url(http://ww4.sinaimg.cn/large/7b777075jw1f122i542w8j204o02swes.jpg) no-repeat scroll center -20px / 123.5px auto;"></div></a>
 								<div style="display:inline;padding: 0px 3px;color: #A4D007;background: #4C6B22;line-height: 15px;">+190%</div>
 								<div style="display:inline;text-decoration: line-through;color: #626366;font-size: 11px;line-height: 15px;">¥ 36</div>
 								<div style="display:inline;padding-left: 4px;font-size: 11px;color: #B0AEAC;line-height: 15px;">¥104</div>
@@ -359,7 +351,7 @@
 							<div style="clear:both"></div>
 						</div>
 						<div style="width: 287px;height: 26px;text-align: right;padding: 4.5px;">
-							查看更多：<a href="http://store.steampowered.com/search/?specials=1&os=win" target="_blank" style="display: inline-block;padding: 0px 15px;font-size: 12px;line-height: 24px;border-radius: 2px;color: #67C1F5;background: #437EA0;">429 款让你哭的特惠产品</a>
+							查看更多：<a href="http://store.steampowered.com/search/?specials=1&amp;os=win" target="_blank" style="display: inline-block;padding: 0px 15px;font-size: 12px;line-height: 24px;border-radius: 2px;color: #67C1F5;background: #437EA0;">429 款让你哭的特惠产品</a>
 						</div>
 					</div>
 					<div style="clear:both"></div>
